--- a/ShopLite/Views/Home/Index.cshtml
+++ b/ShopLite/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Добро пожаловать в ShopLite</h1>
+    <p>Мой первый MVC-проект с ветками Git 🎯</p>
 </div>
