Первый коммит на ГитХаб

--- a/ShopLite/Views/Home/Index.cshtml
+++ b/ShopLite/Views/Home/Index.cshtml
@@ -6,4 +6,5 @@
     <h1 class="display-4">Добро пожаловать в ShopLite</h1>
     <p>Мой первый MVC-проект с ветками Git 🎯</p>
     <p>в проекте подключена система контроля версий</p>
+    <p>Первый коммит на GitHub</p>
 </div>
