--- a/ShopLite/Views/Home/Index.cshtml
+++ b/ShopLite/Views/Home/Index.cshtml
@@ -8,4 +8,5 @@
     <p>в проекте подключена система контроля версий</p>
     <p>Первый коммит на GitHub</p>
     <p>Еще одно изменение в другой ветки!</p>
+    <p>добавил ветку hello</p>
 </div>
